--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="container section">
         <h2>How Complete Sealing Services Improve Property Protection</h2>
-        <p><b><a href="ccccccccccccccccccccccc">Complete Sealing Services</a></b> offer comprehensive protection for multiple surfaces, including driveways, decks, patios, and commercial flooring. These services include deep cleaning, crack repair, and high-quality sealant application. By addressing all aspects of surface protection, complete sealing services ensure that materials remain in excellent condition for years.
+        <p><b><a href="https://robrt-parker1.github.io/deck-sealing-services/">Complete Sealing Services</a></b> offer comprehensive protection for multiple surfaces, including driveways, decks, patios, and commercial flooring. These services include deep cleaning, crack repair, and high-quality sealant application. By addressing all aspects of surface protection, complete sealing services ensure that materials remain in excellent condition for years.
 
 </p>
     </div>
